// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaInterface can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ArrayPropsNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setNames(view: T, value: ReadableArray?): Unit
  public fun setDisableds(view: T, value: ReadableArray?): Unit
  public fun setProgress(view: T, value: ReadableArray?): Unit
  public fun setRadii(view: T, value: ReadableArray?): Unit
  public fun setColors(view: T, value: ReadableArray?): Unit
  public fun setSrcs(view: T, value: ReadableArray?): Unit
  public fun setPoints(view: T, value: ReadableArray?): Unit
  public fun setEdgeInsets(view: T, value: ReadableArray?): Unit
  public fun setDimensions(view: T, value: ReadableArray?): Unit
  public fun setSizes(view: T, value: ReadableArray?): Unit
  public fun setObject(view: T, value: ReadableArray?): Unit
  public fun setArrayOfObjects(view: T, value: ReadableArray?): Unit
  public fun setArrayOfMixed(view: T, value: ReadableArray?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/BooleanPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface BooleanPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
  public fun setDisabledNullable(view: T, value: Boolean?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ColorPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ColorPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setTintColor(view: T, value: Int?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'DimensionPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/DimensionPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;
import com.facebook.yoga.YogaValue;

public interface DimensionPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setMarginBack(view: T, value: YogaValue?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EdgeInsetsPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EdgeInsetsPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EnumPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EnumPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setAlignment(view: T, value: String?): Unit
  public fun setIntervals(view: T, value: Int?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EventNestedObjectPropsNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EventNestedObjectPropsNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/EventPropsNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EventPropsNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/FloatPropsNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface FloatPropsNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setBlurRadius(view: T, value: Float): Unit
  public fun setBlurRadius2(view: T, value: Float): Unit
  public fun setBlurRadius3(view: T, value: Float): Unit
  public fun setBlurRadius4(view: T, value: Float): Unit
  public fun setBlurRadius5(view: T, value: Float): Unit
  public fun setBlurRadius6(view: T, value: Float): Unit
  public fun setBlurRadiusNullable(view: T, value: Float?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ImagePropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ImagePropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setThumbImage(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/IntegerPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface IntegerPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setProgress1(view: T, value: Int): Unit
  public fun setProgress2(view: T, value: Int): Unit
  public fun setProgress3(view: T, value: Int): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface InterfaceOnlyNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setTitle(view: T, value: String?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'MixedPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/MixedPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.Dynamic;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MixedPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setMixedProp(view: T, value: Dynamic): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/MultiNativePropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiNativePropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setThumbImage(view: T, value: ReadableMap?): Unit
  public fun setColor(view: T, value: Int?): Unit
  public fun setThumbTintColor(view: T, value: Int?): Unit
  public fun setPoint(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/NoPropsNoEventsNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface NoPropsNoEventsNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponentManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ObjectPropsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setObjectProp(view: T, value: ReadableMap?): Unit
  public fun setObjectArrayProp(view: T, value: ReadableMap?): Unit
  public fun setObjectPrimitiveRequiredProp(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/PointPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface PointPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setStartPoint(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "java/com/facebook/react/viewmanagers/StringPropNativeComponentViewManagerInterface.kt": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface StringPropNativeComponentViewManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setPlaceholder(view: T, value: String?): Unit
  public fun setDefaultValue(view: T, value: String?): Unit
}
",
}
`;
